--- a/SMPLogin/app/src/main/res/layout/activity_test.xml
+++ b/SMPLogin/app/src/main/res/layout/activity_test.xml
@@ -7,10 +7,13 @@
     tools:context=".TestActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/usrTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="476dp"
         android:text="test if user info was retained"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="66dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.922"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
