--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -18,7 +18,7 @@
         android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/cityTextView"
         app:layout_constraintEnd_toStartOf="@+id/addressEditText"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
