--- a/SMPv2/app/src/main/res/layout/activity_landing.xml
+++ b/SMPv2/app/src/main/res/layout/activity_landing.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="150dp"
         android:background="@drawable/button_background"
         android:text="Sign Up"
+        android:onClick="onclickSignUp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/loginButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +33,7 @@
         android:layout_marginBottom="150dp"
         android:background="@drawable/button_background"
         android:text="Login"
+        android:onClick="onclickLogin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/signUpButton"
@@ -45,7 +47,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/profileNameTextView"
+        app:layout_constraintBottom_toTopOf="@+id/signupTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +56,7 @@
         app:srcCompat="@drawable/logo" />
 
     <TextView
-        android:id="@+id/profileNameTextView"
+        android:id="@+id/signupTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="153dp"
@@ -62,6 +64,9 @@
         android:layout_marginEnd="181dp"
         android:layout_marginBottom="24dp"
         android:text="SuperPoints"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/signUpButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
