--- a/SMPv2/app/src/main/res/layout/activity_login.xml
+++ b/SMPv2/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context=".LoginActivity">
 
     <EditText
-        android:id="@+id/usernameEditText"
+        android:id="@+id/cityEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -18,13 +18,13 @@
         android:layout_marginBottom="20sp"
         android:ems="10"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
+        app:layout_constraintBottom_toTopOf="@+id/postalEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/usernameTextView"
-        app:layout_constraintTop_toBottomOf="@+id/signupTextView" />
+        app:layout_constraintStart_toEndOf="@+id/emailTextView"
+        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
     <EditText
-        android:id="@+id/passwordEditText"
+        android:id="@+id/postalEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/submitButton"
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/passwordTextView"
-        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />
 
     <Button
         android:id="@+id/submitButton"
@@ -54,13 +54,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/postalEditText" />
 
     <TextView
-        android:id="@+id/usernameTextView"
+        android:id="@+id/emailTextView"
         android:layout_width="67sp"
         android:layout_height="31sp"
-        android:layout_alignLeft="@+id/usernameEditText"
+        android:layout_alignLeft="@+id/cityEditText"
         android:layout_alignParentLeft="false"
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="false"
@@ -69,7 +69,7 @@
         android:layout_marginEnd="16dp"
         android:text="Username"
         app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
-        app:layout_constraintEnd_toStartOf="@+id/usernameEditText"
+        app:layout_constraintEnd_toStartOf="@+id/cityEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoImageView"
         app:layout_constraintVertical_bias="0.138" />
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignWithParentIfMissing="false"
-        android:layout_alignRight="@+id/passwordEditText"
+        android:layout_alignRight="@+id/postalEditText"
         android:layout_alignParentStart="false"
         android:layout_alignParentLeft="false"
         android:layout_alignParentTop="false"
@@ -92,14 +92,14 @@
         android:layout_marginStart="22sp"
         android:layout_marginEnd="332sp"
         android:layout_marginBottom="168dp"
-        android:layout_toLeftOf="@+id/passwordEditText"
+        android:layout_toLeftOf="@+id/postalEditText"
         android:hapticFeedbackEnabled="false"
         android:text="Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.281"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />
 
     <ImageView
         android:id="@+id/logoImageView"
@@ -111,7 +111,7 @@
         android:layout_marginTop="32sp"
         android:layout_marginEnd="73sp"
         android:layout_marginBottom="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/signupTextView"
+        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         app:srcCompat="@drawable/logo" />
 
     <TextView
-        android:id="@+id/signupTextView"
+        android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="163sp"
@@ -132,7 +132,7 @@
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
+        app:layout_constraintBottom_toTopOf="@+id/cityEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
