--- a/SMPv2/app/src/main/res/layout/activity_settings.xml
+++ b/SMPv2/app/src/main/res/layout/activity_settings.xml
@@ -73,13 +73,13 @@
         android:id="@+id/passwordTextView"
         android:layout_width="68dp"
         android:layout_height="34dp"
-        android:layout_alignTop="@+id/usernameEditText"
+        android:layout_alignTop="@+id/cityEditText"
         android:layout_marginStart="30dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="33dp"
         android:layout_toStartOf="@+id/logoImageView"
         android:text="Password"
-        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
+        app:layout_constraintEnd_toStartOf="@+id/postalEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
@@ -91,12 +91,12 @@
         android:layout_marginTop="19dp"
         android:layout_marginEnd="13dp"
         android:text="Confirm Password"
-        app:layout_constraintEnd_toStartOf="@+id/confirmEditText"
+        app:layout_constraintEnd_toStartOf="@+id/phoneEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
     <EditText
-        android:id="@+id/passwordEditText"
+        android:id="@+id/postalEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <EditText
-        android:id="@+id/confirmEditText"
+        android:id="@+id/phoneEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
@@ -119,6 +119,6 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/postalEditText" />
 
 </android.support.constraint.ConstraintLayout>
