--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
     <EditText
-        android:id="@+id/passwordEditText"
+        android:id="@+id/postalEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -38,7 +38,7 @@
         android:id="@+id/logoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/signupTextView"
+        android:layout_alignBottom="@+id/nameTextView"
         android:layout_alignParentStart="true"
         android:layout_marginStart="86dp"
         android:layout_marginEnd="87dp"
@@ -59,11 +59,11 @@
         android:text="Sign Up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
 
 
     <EditText
-        android:id="@+id/confirmEditText"
+        android:id="@+id/phoneEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -77,27 +77,27 @@
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/confirmTextView"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/postalEditText" />
 
 
     <TextView
         android:id="@+id/passwordTextView"
         android:layout_width="68dp"
         android:layout_height="34dp"
-        android:layout_alignTop="@+id/usernameEditText"
+        android:layout_alignTop="@+id/cityEditText"
         android:layout_marginTop="36dp"
         android:layout_toStartOf="@+id/logoImageView"
         android:text="Password"
-        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
+        app:layout_constraintEnd_toStartOf="@+id/postalEditText"
         app:layout_constraintHorizontal_bias="0.791"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addressTextView" />
 
     <TextView
-        android:id="@+id/signupTextView"
+        android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/confirmEditText"
+        android:layout_alignStart="@+id/phoneEditText"
         android:layout_alignParentTop="true"
         android:layout_marginStart="176dp"
         android:layout_marginTop="38dp"
@@ -120,7 +120,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="5dp"
         android:text="Confirm Password"
-        app:layout_constraintEnd_toStartOf="@+id/confirmEditText"
+        app:layout_constraintEnd_toStartOf="@+id/phoneEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
@@ -136,5 +136,5 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 </android.support.constraint.ConstraintLayout>
