--- a/SMPv2/app/src/main/res/layout/activity_login.xml
+++ b/SMPv2/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
+        android:onClick="login"/>
 
     <TextView
         android:id="@+id/usernameTextView"
