--- a/SMPv2/app/src/main/res/menu/menu_main.xml
+++ b/SMPv2/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:title="Home"
+        android:id="@+id/home"/>
     <item android:title="Dashboard"
         android:id="@+id/dashboard"
         />
