--- a/SMPv2/app/src/main/res/layout/activity_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_dashboard.xml
@@ -49,5 +49,8 @@
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
 </android.support.constraint.ConstraintLayout>
 
