--- a/SMPv2/app/src/main/res/layout/activity_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_dashboard.xml
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <ListView
+            android:id="@+id/lvPromotions"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></ListView>
 </android.support.constraint.ConstraintLayout>
