--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id = "@+id/promotionBusinessName"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
         android:id = "@+id/promotionDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
