--- a/SMPv2/app/src/main/res/layout/activity_maps.xml
+++ b/SMPv2/app/src/main/res/layout/activity_maps.xml
@@ -14,7 +14,15 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>
+        app:titleTextColor="@android:color/white">
+
+        <SeekBar
+            android:id="@+id/seekBarPrivacy"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            />
+
+    </android.support.v7.widget.Toolbar>
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -24,6 +32,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MapsActivity" />
-
-
 </LinearLayout>
