armin van buren a ducth dj

--- a/SMPv2/app/src/main/res/layout/activity_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_dashboard.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".DashboardActivity">
 
     <include
@@ -12,46 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="128dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="10dp"
-        android:text="My Promos"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:text="@string/dashboard_title">
+    </TextView>
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="112dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="14dp"
-        android:text="Points Status"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="131dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="11dp"
-        android:text="My Preferred Businesses"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+    <ListView
+        android:id="@+id/lvPromotions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
-        <ListView
-            android:id="@+id/lvPromotions"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></ListView>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
 
