--- a/SMPv2/app/src/main/res/layout/activity_login.xml
+++ b/SMPv2/app/src/main/res/layout/activity_login.xml
@@ -12,10 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginStart="32sp"
-        android:layout_marginTop="28sp"
+        android:layout_marginStart="34dp"
         android:layout_marginEnd="87sp"
-        android:layout_marginBottom="20sp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/postalEditText"
@@ -31,13 +29,14 @@
         android:layout_alignParentTop="false"
         android:layout_centerInParent="true"
         android:layout_marginStart="34sp"
-        android:layout_marginTop="24sp"
-        android:layout_marginEnd="85sp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="2dp"
         android:ems="10"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/passwordTextView"
+        app:layout_constraintStart_toEndOf="@+id/postalTextView"
         app:layout_constraintTop_toBottomOf="@+id/cityEditText" />
 
     <Button
@@ -46,16 +45,16 @@
         android:layout_height="63sp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="121sp"
-        android:layout_marginTop="42sp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="121sp"
-        android:layout_marginBottom="118sp"
+        android:layout_marginBottom="130dp"
+        android:onClick="login"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="login"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />
 
 
     <TextView
@@ -66,20 +65,20 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="false"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="107dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="127dp"
         android:layout_marginEnd="16dp"
         android:text="Username"
-        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
+        app:layout_constraintBottom_toTopOf="@+id/postalTextView"
         app:layout_constraintEnd_toStartOf="@+id/cityEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoImageView"
         app:layout_constraintVertical_bias="0.138" />
 
     <TextView
-        android:id="@+id/passwordTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/postalTextView"
+        android:layout_width="75dp"
+        android:layout_height="35dp"
         android:layout_alignWithParentIfMissing="false"
         android:layout_alignRight="@+id/postalEditText"
         android:layout_alignParentStart="false"
@@ -91,7 +90,8 @@
         android:layout_centerInParent="false"
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="true"
-        android:layout_marginStart="22sp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="332sp"
         android:layout_marginBottom="168dp"
         android:layout_toLeftOf="@+id/postalEditText"
@@ -129,7 +129,6 @@
         android:layout_marginStart="163sp"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="145sp"
-        android:layout_marginBottom="28sp"
         android:text="Log In"
         android:textColor="#000000"
         android:textSize="25sp"
