--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -10,14 +10,15 @@
         android:id="@+id/addressTextView"
         android:layout_width="63dp"
         android:layout_height="30dp"
-        android:layout_alignEnd="@+id/confirmTextView"
+        android:layout_alignEnd="@+id/phoneTextView"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="124dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="125dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="20dp"
         android:text="Name"
+        app:layout_constraintBottom_toTopOf="@+id/postalTextView"
         app:layout_constraintEnd_toStartOf="@+id/addressEditText"
-        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
@@ -27,11 +28,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="18dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/passwordTextView"
+        app:layout_constraintStart_toEndOf="@+id/postalTextView"
         app:layout_constraintTop_toBottomOf="@+id/addressEditText" />
 
     <ImageView
@@ -54,10 +56,10 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="152dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="171dp"
-        android:text="Sign Up"
         android:onClick="register"
+        android:text="Sign Up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
@@ -70,25 +72,28 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="5dp"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="22dp"
-        android:layout_toEndOf="@+id/passwordTextView"
+        android:layout_toEndOf="@+id/postalTextView"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/confirmTextView"
+        app:layout_constraintStart_toEndOf="@+id/phoneTextView"
         app:layout_constraintTop_toBottomOf="@+id/postalEditText" />
 
 
     <TextView
-        android:id="@+id/passwordTextView"
+        android:id="@+id/postalTextView"
         android:layout_width="68dp"
         android:layout_height="34dp"
         android:layout_alignTop="@+id/cityEditText"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="25dp"
         android:layout_toStartOf="@+id/logoImageView"
         android:text="Password"
+        app:layout_constraintBottom_toTopOf="@+id/phoneTextView"
         app:layout_constraintEnd_toStartOf="@+id/postalEditText"
         app:layout_constraintHorizontal_bias="0.791"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/phoneEditText"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="176dp"
+        android:layout_marginStart="170dp"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="158dp"
         android:text="Sign Up"
@@ -112,18 +117,18 @@
         app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
     <TextView
-        android:id="@+id/confirmTextView"
+        android:id="@+id/phoneTextView"
         android:layout_width="89dp"
         android:layout_height="41dp"
         android:layout_alignEnd="@+id/addressEditText"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="5dp"
         android:text="Confirm Password"
         app:layout_constraintEnd_toStartOf="@+id/phoneEditText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/postalTextView" />
 
 
     <EditText
@@ -132,10 +137,52 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/addressTextView"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="27dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="40dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addressTextView"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
+
+
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="298dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="17dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/signupButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneTextView">
+
+        <RadioButton
+            android:id="@+id/userRB"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="10dp"
+            android:text="User"
+            app:layout_constraintEnd_toStartOf="@+id/businessRB"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
+
+        <RadioButton
+            android:id="@+id/businessRB"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="45dp"
+            android:text="Business"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/userRB"
+            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
+
+    </RadioGroup>
 </android.support.constraint.ConstraintLayout>
