--- a/SMPv2/app/src/main/res/layout/activity_landing.xml
+++ b/SMPv2/app/src/main/res/layout/activity_landing.xml
@@ -4,19 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LandingActivity">
+    android:background="@color/colorBG"
+    tools:context=".LandingActivity"
+    style="@style/font">
 
     <Button
         android:id="@+id/signUpButton"
         android:layout_width="140dp"
         android:layout_height="52dp"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="289dp"
+        android:layout_marginTop="400dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="150dp"
         android:background="@drawable/button_background"
-        android:text="Sign Up"
         android:onClick="onclickSignUp"
+        android:text="Sign Up"
+        style="@style/font"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/loginButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,12 +33,15 @@
         android:layout_width="140dp"
         android:layout_height="52dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="289dp"
+        android:layout_marginTop="400dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="150dp"
         android:background="@drawable/button_background"
-        android:text="Login"
         android:onClick="onclickLogin"
+        android:text="Login"
+        style="@style/font"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/signUpButton"
@@ -42,9 +50,10 @@
 
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="260dp"
-        android:layout_height="216dp"
+        android:layout_width="366dp"
+        android:layout_height="210dp"
         android:layout_marginStart="52dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/nameTextView"
@@ -53,7 +62,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logo3" />
 
     <TextView
         android:id="@+id/nameTextView"
@@ -62,11 +71,11 @@
         android:layout_marginStart="153dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="181dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="50dp"
         android:text="SuperPoints"
-        android:textColor="#000000"
-        android:textStyle="bold"
+        android:textColor="@color/white"
         android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/signUpButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
