--- a/SMPv2/app/src/main/res/values/styles.xml
+++ b/SMPv2/app/src/main/res/values/styles.xml
@@ -6,6 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
+    <style name="font" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:fontFamily">@font/robotoregular</item>
+        <item name="fontFamily">@font/robotoregular</item>
+        <item name="android:textStyle">normal</item>
+
+
+
+    </style>
 </resources>
