adding options to menu, adding toolbar to everything

--- a/SMPv2/app/src/main/res/menu/menu_main.xml
+++ b/SMPv2/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,9 @@
     <item android:title="Dashboard"
         android:id="@+id/dashboard"
         />
+    <item android:title="View Points"
+        android:id="@+id/viewPoints"
+        />
     <item android:title="Profile"
         android:id="@+id/profile"
         />
